--- a/src/styles.less
+++ b/src/styles.less
@@ -5,6 +5,10 @@
 @import '~@delon/theme/styles/layout/default/index';
 @import '~@delon/theme/styles/layout/fullscreen/index';
 
+// region: Third Library
+@import '../node_modules/simple-line-icons/css/simple-line-icons.css';
+@import '../node_modules/font-awesome/css/font-awesome.css';
+
 @import './styles/index';
 @import './styles/theme';
 // endregion
