--- a/src/app/layout/fullscreen/fullscreen.component.html
+++ b/src/app/layout/fullscreen/fullscreen.component.html
@@ -1,1 +1,11 @@
 <router-outlet></router-outlet>
+<nz-modal [(nzVisible)]="layoutService.isVisible" [nzTitle]="layoutService.nzTitle" [nzWidth]="layoutService.nzWidth"
+    [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()">
+    <router-outlet name="modal"></router-outlet>
+
+    <ng-template #modalFooter>
+
+        <!-- <button nz-button nzType="default" (click)="handleCancel()">Custom Callback</button>
+        <button nz-button nzType="primary" (click)="handleOk()" [nzLoading]="isConfirmLoading">Custom Submit</button> -->
+    </ng-template>
+</nz-modal>
