--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,10 +1,10 @@
     // //顶部菜单样式
     @primary-color: #1890ff;
-    @alain-default-header-bg: #203668;
+    @alain-default-header-bg: #1C0F3E;
    
 
    //左侧菜单样式
-   @alain-default-aside-bg: #203668;
+   @alain-default-aside-bg: #002140;
    @alain-default-aside-nav-text-color:hsla(0,0%,100%,.65);
    @alain-default-aside-nav-text-hover-color: #fff;
    @alain-default-aside-nav-selected-text-color: #fff;
